[package]
name = "foster_btree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# For wasm
[lib]
crate-type = ["cdylib", "rlib"]

[features]
log_trace = []
log_debug = []
log_info = []
log_warn = []
log_error = []
stat = []

[dependencies]
tempfile = "3.8"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
chrono = "0.4"
lazy_static = "1.4"
criterion = { version = "0.5", features = ["html_reports"]}
wasm-bindgen = "0.2"
rstest = "0.19"
clap = {version = "4.5", features = ["derive"]}
io-uring = "0.6"
libc = "0.2"

# For perf
[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
debug = true # For perf

[[bench]]
name = "random_insert"
harness = false