[package]
name = "fbtree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["async_write"]
log_trace = []
log_debug = []
log_info = []
log_warn = []
log_error = []
stat = []
async_write = []

[dependencies]
tempfile = "3.8"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
lazy_static = { version = "1.4" }
clap = {version = "4.5", features = ["derive"]}

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"]}
serde_cbor = "0.11"
rstest = "0.19"

# For linux, we use io-uring
[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.6"
libc = "0.2"

# For wasm (uncomment to use)
# [target.'cfg(target_arch = "wasm32")'.lib]
# crate-type = ["cdylib", "rlib"]
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
debug = true # For perf

[[bench]]
name = "random_insert"
harness = false